@@ -1,8 +1,6 @@
 package com.br.sistemarestaurante.infrastructure.persistence.service;
 
 import com.br.sistemarestaurante.domain.entity.Avaliacao;
-import com.br.sistemarestaurante.domain.entity.Reserva;
-import com.br.sistemarestaurante.domain.exception.AvaliacaoNotFoundException;
 import com.br.sistemarestaurante.domain.exception.ReservaNotFoundException;
 import com.br.sistemarestaurante.infrastructure.persistence.domaincontracts.IAvaliacaoRepositoryDomainContract;
 import com.br.sistemarestaurante.infrastructure.persistence.entity.AvaliacaoTable;
@@ -10,10 +8,10 @@ import com.br.sistemarestaurante.infrastructure.persistence.entity.ReservaTable;
 import com.br.sistemarestaurante.infrastructure.persistence.repository.IAvaliacaoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class AvaliacaoService implements IAvaliacaoRepositoryDomainContract {
@@ -38,7 +36,7 @@ public class AvaliacaoService implements IAvaliacaoRepositoryDomainContract {
 
         return this.repository.findByReservaTable(reservaTable).stream()
                 .map(AvaliacaoTable::ToDomainEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
